--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <!-- 	<script src="week4_slider.js"></script> -->
 
 <!-- 			<script src="image_homework.js"></script> 	  -->
-<!-- 	<script src="slider_homework.js"></script>	 -->
-	 <script src="webcam.js"></script>
+	<script src="slider_homework.js"></script>
+<!--	 <script src="webcam.js"></script> -->
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
